--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
 .App {
   text-align: center;
+  font-size: 25px;
+}
+
+.App .container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.App table {
+  padding: 20px;
+  margin: 0 auto;
+}
+.App table,
+.App th,
+.App td {
+  padding: 1rem;
+  border: 1px solid black;
+  border-collapse: collapse;
 }
