--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,25 @@
-.App {
-  text-align: center;
-  font-size: 25px;
+html {
+  height: -webkit-fill-available;
+  overflow: hidden;
 }
 
-.App .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 1rem;
+#app_body {
+  max-height: 100vh;
+  font-size: 16px;
+  max-height: -webkit-fill-available;
+  background-image: url("assets/stars-background.jpeg") !important;
+  background-size: cover;
+  background-position: center left;
+  background-repeat: no-repeat;
+}
+
+@media only screen and (min-width: 1000px) {
+  #app_body .ui.container {
+    width: 1400px;
+  }
+}
+
+.App {
+  padding: 1rem 0;
+  text-align: center;
 }
