--- a/src/VehicleTable/vehicleTable.scss
+++ b/src/VehicleTable/vehicleTable.scss
@@ -1,14 +1,10 @@
 .VehicleTable {
-  padding: 20px;
-  margin: 0 auto;
-  border: 1px solid black;
-  border-collapse: collapse;
-
-  .VehicleTable th,
-  .VehicleTable td {
-    padding: 1rem;
-    border: 1px solid black;
-    border-collapse: collapse;
+  .title {
+    font-weight: bold;
+    margin-left: 0.3rem;
+  }
+  .planets {
+    font-size: 0.95rem;
   }
 }
 
