--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,26 @@
-body {
-  margin: 0;
+html {
+  height: -webkit-fill-available;
+  overflow: hidden;
+}
+
+#app_body {
+  max-height: 100vh;
+  font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  max-height: -webkit-fill-available;
+  background-image: url("assets/stars-background.jpeg") !important;
+  background-size: cover;
+  background-position: center left;
+  background-repeat: no-repeat;
+  margin: 0;
+}
+
+@media only screen and (min-width: 1000px) {
+  #app_body .ui.container {
+    width: 1400px;
+  }
 }
 
 code {
