--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .App {
   min-height: 100vh;
-  padding: 1rem 0;
+  padding: 1rem;
   text-align: center;
 
   @media only screen and (min-width: 760px) {
