--- a/src/components/Graph/graph.scss
+++ b/src/components/Graph/graph.scss
@@ -1,52 +1,89 @@
-.graph {
+.Graph {
+
+}
+dl {
   display: flex;
+  overflow: hidden;
+  background-color: white;
+  flex-direction: column;
+  width: 100%;
   position: relative;
-  max-width: 800px;
-  height: 400px;
-  margin: 0 auto;
+  padding: 20px;
+}
 
-  .line {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 2px;
-    background: rgba(0, 0, 0, .1);
-    left: 10%;
-  }
+dt {
+  align-self: flex-start;
+  width: 100%;
+  font-weight: 700;
+  display: block;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin-bottom: 20px;
+  margin-left: 130px;
+}
 
-  .bar-text-content,
-  .bar-text-values {
-    height: 100%;
-    width: 30%;
-  }
+.text {
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 40px;
+  width: 130px;
+  background-color: white;
+  position: absolute;
+  left: 0;
+  justify-content: flex-end;
+}
 
-  .bar-container {
+.value {
+  display: inline-block;
+  font-size: 0.8em;
+}
+
+.percentage {
+  font-size: .8em;
+  line-height: 1;
+  text-transform: uppercase;
+  width: 100%;
+  height: 40px;
+  margin-left: 130px;
+  background: repeating-linear-gradient(
+                  to right,
+                  #ddd,
+                  #ddd 1px,
+                  #fff 1px,
+                  #fff 5%
+  );
+
+  &:after {
+    content: "";
+    display: block;
+    background-color: #3d9970;
+    width: 50px;
+    margin-bottom: 10px;
+    height: 90%;
     position: relative;
-    width: 80%;
-    height: 100%;
-    position: relative;
-    background: #ddd;
-    z-index: -25;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: background-color .3s ease;
+    cursor: pointer;
   }
 
-  .bar {
-    height: 20%;
-    background: #e05b42;
-    z-index: 200;
-    border-bottom: 1px solid #222;
-    border-right: 1px solid #222;
-
-    &:last-child {
-      border-bottom: none;
+  &:hover,
+  &:focus {
+    &:after {
+      background-color: #aaa;
     }
   }
+}
 
-  .text {
-    color: white;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 0.5rem;
+@for $i from 1 through 100 {
+  .percentage-#{$i} {
+    &:after {
+      $value: ($i * 1%);
+      width: $value;
+    }
   }
 }
+
